--- a/style.css
+++ b/style.css
@@ -169,6 +169,64 @@ a:hover {
     margin: 0;
 }
 
+.card {
+    /* fixed position a zero-height full width container */
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 0;
+	/* center all inline content */
+	text-align: center;
+}
+
+.card img {
+
+}
+
+.card > div {
+    /* make the block inline */
+	display: inline-block;
+	/* reset container's center alignment */
+	text-align: left;
+}
+
+.card h1, h2 {
+    font-size: 30px;
+    font-family: 'Sen', sans-serif;
+    font-weight: bold;
+    letter-spacing: 1px;
+    padding-top: 5px;
+    margin-bottom: -2px;
+}
+
+.contact {
+    text-align: left;
+    display: inline-block;
+}
+
+.contact ul {
+    list-style: outside;
+    margin-top: 5px;
+}
+
+.contact li {
+    padding: 0px 0 0px 25px;
+    margin: 0;
+    list-style: none;
+    background-repeat: no-repeat;
+	background-position: left center;
+	background-size: 11px;
+}
+
+hr { 
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+  border: 0.1pt solid #000000;
+} 
+
 .footer {
     border-top: 1px solid #e3e3e3;
     padding: 10px 0px 0px 0px;
