--- a/style.css
+++ b/style.css
@@ -202,6 +202,7 @@ a:hover {
 .contact {
     text-align: left;
     display: inline-block;
+    font-size: 14px;
 }
 
 .contact ul {
@@ -219,8 +220,8 @@ a:hover {
 }
 
 hr { 
-  margin-top: 0.25em;
-  margin-bottom: 0.25em;
+  margin-top: 0.20em;
+  margin-bottom: 0.20em;
   margin-left: auto;
   margin-right: auto;
   border: 0.1pt solid #000000;
