--- a/neu/phi_style.css
+++ b/neu/phi_style.css
@@ -1,110 +1,169 @@
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Internet Explorer */
-@-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-
-/* general formatting */
-html {
-    scroll-behavior: smooth;
+/* Global styles */
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    background-color: #fbfbfb;
-    font-family: 'Inter', sans-serif;
-    font-size: 15px;
+    font-family: 'Inter', Arial, sans-serif;
+    font-size: 12pt;
+    background-color: #e8e8e8;
+    margin: 0;
+    padding: 0;
     color: #222222;
-    line-height: 1.35em;
-    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
-    -moz-animation: fadein 1s; /* Firefox < 16 */
-    -ms-animation: fadein 1s; /* Internet Explorer */
-    -o-animation: fadein 1s; /* Opera < 12.1 */
-    animation: fadein 1s;
+    display: flex;
+    flex-direction: column;
 }
 
-p {
-    line-height: 1.4em;
-    margin-bottom: 0;
+header {
+    background-color: #003c80;
+    color: #e8e8e8;
+    padding: 0px;
+    text-align: center; /* Center header content */
 }
 
-b {
+nav ul {
+    list-style-type: none;
+    margin-top: -10px;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+nav ul li a {
+    color: #e8e8e8;
+    text-decoration: none;
     font-weight: 600;
 }
 
-strong {
-    font-weight: 800;
+nav ul li a:hover {
+    color: #003c80;
+    background-color: #e8e8e8;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+a {
+    color: #003c80;
+    font-weight: 600;
+    text-decoration: none;
+}
+
+a:hover {
+    background-color: #003c80;
+    color: #e8e8e8;
 }
 
 h1 {
-    font-size: 30px;
-    font-weight: 800;
-    color: #014421;
-    padding-top: 15px;
-    letter-spacing: 0.3pt;
-}
-
-h2 {
-    font-size: 22px !important;
-    font-family: 'Inter', sans-serif;
-    font-weight: 600 !important;
-    letter-spacing: -0.2pt;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    line-height: 26px;
-    color: #355e3b;
+    letter-spacing: 1pt;
 }
 
 h3 {
-    font-size: 26px;
-    font-weight: 800;
-    padding-top: 15px;
-    letter-spacing: 0.5pt;
-    margin-bottom: 30px;
+    margin-top: -10px;
 }
 
-table, tr {
-    border: 1px dotted #355e3b;
-    margin: 20px 0px 30px 0px;
-    width: 100%;
+p {
+    font-size: 11pt;
+    line-height: 1.4em;
     text-align: left;
-    vertical-align: top;
-    border-spacing: 15px;
 }
 
-.narrow-column {  /* narrower column of table */
-    width: 33%;
-    line-height: 1.8em;
+main {
+    flex: 1; /* Allow main content to grow */
+    padding: 20px;
+    max-width: 1000px; /* Limit main content width */
+    margin: 0 auto; /* Center main content horizontally */
 }
 
-.component {
-    font-size: 18px;
+section {
+    margin-bottom: 20px;
+}
+
+.program {
+    text-align: center;
+    margin: -5px 0px -5px 0px;
+}
+
+.program > h2, .program > h3 {
     font-weight: 600;
-    color: #355e3b;
-    padding-bottom: 10px;
+}
+
+.comps > h1 {
+    text-align: center;
+    padding: 10px 0px 15px 0px;
+    margin-bottom: -10px;
+    color: #003c80;
+    font-size: 22pt;
+}
+
+.exam {
+    display: flex;
+    flex-wrap: wrap;
+    border: 1px dotted #222222;
+    padding: 20px 15px 0px 15px;
+    margin-top: 20px;
+}
+
+.exam > h3 {
+    margin-top: 0;
+    text-align: justify;
+}
+
+.exam > .research {
+    /*flex: 1 1 auto; !* Let the child divs grow equally *!*/
+    margin-right: 20px; /* Add margin between the child divs */
+}
+
+.research {
+    flex: 0 0 270px; /* Set a specific width for the .research div */
+}
+
+.research > h3 {
+    font-weight: 530;
+    font-size: 15pt;
+    color: #003c80;
+}
+
+.paper {
+    flex: 1 1 600px; /* Let the .heartview div grow to fill the remaining space */
+}
+
+footer {
+    background-color: #003c80;
+    color: #e8e8e8;
+    padding: 0px;
+    text-align: center;
+}
+
+footer > p {
+    font-size: 10pt;
+    text-align: center;
+}
+
+footer .updated {
+    font-size: 9pt;
+    font-style: italic;
+}
+
+ul {
+  list-style-type: none; /* Remove bullet points */
+}
+
+li {
+    line-height: 1.5em;
+}
+
+.stats {
+    padding-inline-start: 0px;
+    font-size: 11pt;
+}
+
+.stats > li {
+    line-height: 1.8em;
 }
 
 i {
@@ -112,7 +171,7 @@ i {
 }
 
 .fa-regular {
-    color: #355e3b;
+    color: #003c80;
     font-size: 14pt;
     vertical-align: -1pt;
 }
@@ -120,19 +179,23 @@ i {
 .fa-circle-question {
     font-size: 11pt;
     vertical-align: 0;
+    margin-left: 5px;
+}
+
+.role {
+    margin: 0px 0px 5px -15px;
 }
 
 .role li {
     list-style: none;
-    margin-left: 1.6rem;
-    margin-right: 0;
-    margin-bottom: 0.85rem;
-    margin-top: 5px;
+    margin: 0;
+    font-size: 11pt;
 }
+
 .role li::before {
     content: '\f007';
     font-family: 'Font Awesome 5 Free';
-    color: #355e3b;
+    color: #003c80;
     float: left;     /* force the margin to the edge of the row */
     margin-left: -1.6rem;
 }
@@ -143,6 +206,7 @@ i {
     display: inline-block;
     cursor: pointer;
 }
+
 .tooltip::before {
     content: "EAI PervasiveHealth is a premier international forum with a \
     specific focus on technologies and human factors related to the use of \
@@ -151,7 +215,7 @@ i {
     Science, Compendex, Scopus, DBLP, EU Digital Library, Google Scholar, \
     IO-Port, MathSciNet, Inspec, and Zentralblatt MATH.";
     visibility: hidden;
-    background-color: #bcb88a;
+    background-color: #9ec3d7;
     color: #222222;
     text-align: left;
     line-height: 1.2em;
@@ -167,18 +231,26 @@ i {
     opacity: 0;
     transition: opacity 0.3s;
 }
+
+.tooltip:hover::before {    /* show tooltip on hover */
+    visibility: visible;
+    opacity: 1;
+}
+
 .tooltip_review {
     position: relative;
     display: inline-block;
     cursor: pointer;
+    margin-left: -3px;
 }
+
 .tooltip_review::before {
     content: "A mapping review employs a flexible and exploratory search \
     strategy to gain a thematic understanding of the existing research on a \
     specific topic, which includes evaluating potential gaps for future \
     research to address.";
     visibility: hidden;
-    background-color: #bcb88a;
+    background-color: #9ec3d7;
     color: #222222;
     text-align: left;
     line-height: 1.2em;
@@ -195,100 +267,31 @@ i {
     transition: opacity 0.3s;
 }
 
-/* Show tooltip on hover */
-.tooltip:hover::before {
-    visibility: visible;
-    opacity: 1;
-}
 .tooltip_review:hover::before {
     visibility: visible;
     opacity: 1;
 }
 
-/* Styles profile picture */
-.profile-picture {
-    height: 200px;
-    width: 200px;
-    position: relative;
-    margin: 30px 0 0 15px;
-    float: right;
-    border-radius: 50%;
-}
+/* Responsive styles */
+@media screen and (max-width: 768px) {
+    header {
+        padding: 10px;
+    }
 
-a {
-    text-decoration: none;
-    color: #013220;
-    font-weight: 600;
-}
-    
-a:hover {
-    text-decoration: none;
-    background-color: #355e3b;
-    color: #ffffff;
-}
+    nav ul li {
+        display: block;
+        margin: 10px 0;
+    }
 
-.phi {
-    /* fixed position a zero-height full width container */
-	width: 80%; /* Adjust the width as needed */
-    max-width: 900px; /* Set a maximum width if necessary */
-    margin: 0 auto; /* Set margin to auto for horizontal centering */
-	height: auto;
-	text-align: center; /* Center all inline content */
-}
+    main {
+        padding: 10px;
+    }
 
-ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
+    .exam > div {
+        margin-right: 0;
+    }
 
-hr { 
-    margin-bottom: 0.20em;
-    margin-top: -0.20em;
-    margin-left: auto;
-    margin-right: auto;
-    border: 0.1pt solid #013220;
-}
-
-/* Pop-out Contact */
-.pop-out-div {
-    position: fixed;
-    top: 85%;
-    right: 10px;
-    transform: translate(83%, -50%);
-    width: auto;
-    height: auto;
-    color: #222222;
-    display: flex;
-    align-items: center;
-    transition: transform 0.3s ease-in-out;
-}
-
-.pop-out-div:hover {
-    transform: translate(0, -50%);
-}
-
-.container {
-    overflow: auto;
-    width: 240px;
-}
-
-.cat {
-    float: left; /* Distribute available space equally between the two divs */
-    width: auto;
-    margin: 12px 0px 0px 5px;
-}
-
-.contact {
-    float: right;
-    width: auto;
-    font-size: 10pt;
-    font-weight: 600;
-    line-height: 1.3em;
-}
-
-.update {
-    font-size: 9pt;
-    font-weight: normal;
-    color: #355e3b;
+    footer {
+        padding: 5px;
+    }
 }
