--- a/neu/phi_style.css
+++ b/neu/phi_style.css
@@ -137,6 +137,51 @@ section {
     font-weight: 600;
 }
 
+.phd {
+    flex: 1; /* Allow main content to grow */
+    padding: 10px;
+    max-width: 800px; /* Limit main content width */
+    margin: 0 auto; /* Center main content horizontally */
+}
+
+.phd h2 {
+    font-weight: 600;
+    font-size: 15pt;
+}
+
+.phd h3 {
+    font-weight: 600;
+    font-size: 13.5pt;
+    color: #003c80;
+    margin-bottom: 20px;
+}
+
+.proposal {
+    padding-bottom: 15px;
+}
+
+.proposal p {
+    font-size: 11.5pt;
+    line-height: 1.6em;
+}
+
+.proposal h1 {
+    font-size: 19pt;
+    margin-top: 15px;
+}
+
+.committee {
+    margin-top: -10px;
+}
+
+.committee a:hover {
+    background: none;
+}
+
+.committee p {
+    margin: 7px 0px 7px 0px;
+}
+
 footer {
     background-color: #003c80;
     color: #e8e8e8;
@@ -179,6 +224,16 @@ i {
     color: #003c80;
     font-size: 14pt;
     vertical-align: -1pt;
+}
+
+.fa-envelope {
+    padding-left: 3px;
+}
+
+.fa-globe {
+    color: #003c80;
+    font-size: 12pt;
+    margin-left: -2px;
 }
 
 .fa-circle-question {
